@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-10-10T08:22:56Z",
+  "timestamp" : "2023-10-12T08:22:44Z",
   "count_outdated" : 57,
   "uniques_outdated" : 43,
-  "count" : 59,
-  "uniques" : 44,
+  "count" : 60,
+  "uniques" : 45,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
